--- a/StalkerNet/Views/Personal/Create.cshtml
+++ b/StalkerNet/Views/Personal/Create.cshtml
@@ -1,23 +1,19 @@
 ﻿@model StalkerNet.Models.Person
 
-
 @{
-    ViewBag.Title = "Edit";
-    ViewBag.Message = "Personal";
+    ViewBag.Title = "Create";
 }
 
-<h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Create</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h4>Person</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
-
         <div class="form-group">
             @Html.LabelFor(model => model.firstname, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -71,18 +67,31 @@
                 <script type="text/javascript">
         function SubmitForm() {
 
-    var r = confirm("Are you sure you want to edit person?");
+    var r = confirm("Are you sure you want to create person?");
     if (r == false) {
         return false;
     }
+    if (r == true) {
 
-}</script>
-                <input type="submit" value="Save" class="btn btn-default" onclick="javascript: return SubmitForm();" />
+        return SubmitForm2();
+    }
+        }
+
+        function SubmitForm2() {
+
+            var r = confirm("Are you sure you want to add person to this family?");
+            if (r == false) {
+                return false;
+            }
+           
+        }
+                </script>
+                <input type="submit" value="Create" class="btn btn-default" onclick="javascript: return SubmitForm();" />
             </div>
         </div>
     </div>
 }
 
-<div><b>
+<div>
     @Html.ActionLink("Back to List", "Index")
-</b></div>
+</div>
