--- a/StalkerNet/Views/Shared/_Layout.cshtml
+++ b/StalkerNet/Views/Shared/_Layout.cshtml
@@ -54,19 +54,17 @@
                 @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
-                <div class="row">
-                    <div class="six columns">
-                        <ul class="nav navbar-nav">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </div>
-                    <div class="six columns">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Family", "Index", "Family")</li>
+                    <li>@Html.ActionLink("Personal", "Index", "Personal")</li>
+                    <li>
                         @Html.Partial("_LoginPartial")
-
-                    </div>
-                </div>
+                    </li>
+                </ul>
+               
             </div>
 
         </div>
